# newsletter

./: .gitignore  firestore.indexes.json  firestore.rules
.github/workflows/: deploy.yml
backend/: Dockerfile  app.py  main.py  pyproject.toml
backend/tools/: firestore_client.py  generate_chart.py  generate_infographic.py  generate_video.py  google_auth.py  render_html.py  research_topic.py  send_email_gmail.py  send_email_resend.py  synthesize_content.py  upload_to_gcs.py
backend/tools/templates/: newsletter.html.j2
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  topicsConfig.js
frontend/src/components/: ThreeBackground.jsx
frontend/src/components/ui/: AnimatedIcon.jsx  badge.jsx  button.jsx  card.jsx  input.jsx  label.jsx  select.jsx
frontend/src/hooks/: useAuth.jsx
frontend/src/lib/: api.js  firebase.js
frontend/src/pages/: Archive.jsx  Dashboard.jsx  History.jsx  Landing.jsx  Login.jsx  Onboarding.jsx  Signup.jsx
